# data-summarizer

./: .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: app.py  components.json  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: field.tsx  input.tsx
