[project]
name = "data-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]
